--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 node {
      stage('SCM') {
 	echo 'gathering code from version control'
-	git branch: '$(branch)', url: 'https://github.com/suresh-13/.git'
+	git branch: '$(branch)', url: 'https://github.com/suresh-13/Hellopipe.git'
      }
      stage('Build') {
         echo 'Building....'
