--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,7 @@
 node {
      stage('SCM') {
 	echo 'gathering code from version control'
+	git branch: '$(branch)', url: 'https://github.com/suresh-13/Hellopipe/JenkinsGroovy.git'
      }
      stage('Build') {
         echo 'Building....'
