--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,12 @@
+import jenkins.model.*;
+
 node {
      stage('SCM') {
 	echo 'gathering code from version control'
 	git branch: '$(branch)', url: 'https://github.com/suresh-13/Hellopipe.git'
      }
      stage('Build') {
-        echo 'Building....'
+     echo 'Building....'
 	sh gradle --version
 	echo 'Buiding new feature'
      }
