--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ import jenkins.model.*;
 node {
      stage('SCM') {
 	echo 'gathering code from version control'
-	git branch: '$(branch)', url: 'https://github.com/suresh-13/Hellopipe/First_Sample.git'
+	git branch: '$(branch)', url: 'https://github.com/suresh-13/gradle.git'
      }
      stage('Build') {
      echo 'Building....'
